--- a/stile.css
+++ b/stile.css
@@ -5,7 +5,8 @@ a {text-decoration: none;}
 /*GENERAL*/
 .animate {
   -webkit-transition: all 0.3s ease-out;
-          transition: all 0.3s ease-out;}
+          transition: all 0.3s ease-out;
+            align-items: center;}
 .button {display: inline-block; background: #fff; color: #000; padding: 15px 30px; border-radius: 3px; text-decoration: none;}
 p {line-height: 22px;}
 a {color: #16dd94;}
@@ -13,8 +14,8 @@ a:hover {color: #1af3a4;}
 
 /*HEADER*/
 .logo {height:100%; width:100%;}
-.header {background: #333;}
-.header__logo {color: #fff; float: left; display: block; padding: 20px; width:30%}
+.header {background: #333; height: 15%;}
+.header__logo {color: #fff; float: left; display: block; padding: 3px 20px; width:250px}
 /*DARIO*/
 .header__logo__dario {color: #fff; float: left; display: block; padding-top: 5px;width:8%;}
 .logo__dario{height:45px; width:90px;}
@@ -22,9 +23,9 @@ a:hover {color: #1af3a4;}
 .header__menu__dario{float: right; margin: 0; padding: 0;}
 .header__darioHide{height: 0px;}
 /*DARIO*/
-.header__menu {float: right; margin: 0; padding: 0;}
-.header__menu__item {display: inline-block;}
-.header__menu__item a {color: #fff; display: block; padding: 20px;}
+.header__menu {float: right; margin: 0; width: 70%; height: 100%; padding: 0px 10px; border: solid lime 1px;}
+.header__menu__item {display: inline-block; vertical-align: middle; text-align: center; border: solid red 1px;}
+.header__menu__item a {color: #fff; display: block; padding: 20px 10px;}
 .header__menu__item a:hover {background: #000;}
 .header__icon-bar {display: block; float: right; padding: 15px; display: none;}
 .header__icon-bar span {display: block; height: 3px; width: 30px; background: #fff; margin-bottom: 5px;}
@@ -53,7 +54,7 @@ a:hover {color: #1af3a4;}
 .card__copy h3 {margin-bottom: 0;}
 
 /*BANNER*/
-.banner {background: #fff; height: 50%; margin-top: 40px}
+.banner {background: #fff; height: 50%; margin-top: 40px;}
 .banner__image {width: 30%; float: left; height: 100%;
   background-image: image(C:\Users\color\Desktop\Project\gesa\resources\Gesa-logo-4.png);
   background-size: cover;
@@ -65,6 +66,9 @@ a:hover {color: #1af3a4;}
 .banner__copy__text {display: table-cell; vertical-align: middle; padding: 30px;}
 .banner__copy__text h3 {font-size: 36px; margin-bottom: 0;}
 .banner__copy__text h4 {font-size: 22px; margin: 5px 0;}
+
+.banner__autorizzazioni {border: 1px solid lime; background: #fff; height: 50%; margin-top: 40px;}
+.banner__image__autorizzazioni {border: 1px solid red; float: left; width: 200px; height: 200px; padding: 0px; margin;}
 
 /*FOOTER*/
 .footer {background: #333; padding: 30px; color: #fff; margin-top: 40px;}
@@ -82,12 +86,13 @@ a:hover {color: #1af3a4;}
 }
 
 /*SMARTPHONE*/
-@media (max-width: 767px) {
+/*@media (max-width: 767px)*/
+@media (max-width: 850px) {
 .header {position: fixed; z-index: 100; width: 100%;}
 .header__icon-bar {display: block;}
-.header__menu__item {display: block;}
+.header__menu__item {display: block; vertical-align: middle; text-align: left;}
 .header__menu {width: 100%; height: 0px;overflow: hidden;}
-.is-open {height: 300px; overflow: auto;}
+.is-open {height: 360px; overflow: auto;}
 /*cover*/
 .cover { height: 100%;}
 /*cards*/
