--- a/stile.css
+++ b/stile.css
@@ -14,8 +14,8 @@ a:hover {color: #1af3a4;}
 
 /*HEADER*/
 .logo {height:100%; width:100%;}
-.header {background: #333; height: 15%;}
-.header__logo {color: #fff; float: left; display: block; padding: 3px 20px; width:250px}
+.header {background: #333; height: 120px;}
+.header__logo {color: #fff; float: left; display: block; padding: 3px 20px; width:250px; margin: 5px 5px; border: solid 1px red;}
 /*DARIO*/
 .header__logo__dario {color: #fff; float: left; display: block; padding-top: 5px;width:8%;}
 .logo__dario{height:45px; width:90px;}
@@ -23,8 +23,9 @@ a:hover {color: #1af3a4;}
 .header__menu__dario{float: right; margin: 0; padding: 0;}
 .header__darioHide{height: 0px;}
 /*DARIO*/
-.header__menu {float: right; margin: 0; width: 70%; height: 100%; padding: 0px 10px; border: solid lime 1px;}
-.header__menu__item {display: inline-block; vertical-align: middle; text-align: center; border: solid red 1px;}
+.header__menu__container {width: 80%; height: 100px; border: solid 1px lime; float: right;}
+.header__menu {float: right; margin: 0; width: 65%; height: 100%; padding: 30px 30px; border: solid lime 1px; background: #333;}
+.header__menu__item {display: inline-block; vertical-align: middle; text-align: center; border: solid red 1px; height: 58px; margin: auto auto; float: right;}
 .header__menu__item a {color: #fff; display: block; padding: 20px 10px;}
 .header__menu__item a:hover {background: #000;}
 .header__icon-bar {display: block; float: right; padding: 15px; display: none;}
@@ -90,9 +91,9 @@ a:hover {color: #1af3a4;}
 @media (max-width: 850px) {
 .header {position: fixed; z-index: 100; width: 100%;}
 .header__icon-bar {display: block;}
-.header__menu__item {display: block; vertical-align: middle; text-align: left;}
-.header__menu {width: 100%; height: 0px;overflow: hidden;}
-.is-open {height: 360px; overflow: auto;}
+.header__menu__item {display: block; vertical-align: middle; text-align: left; width: 100%;}
+.header__menu {width: 100%; height: 0px;overflow: hidden;  padding: 0;}
+.is-open {height: 360px; overflow: hidden;  padding: 30px 30px;}
 /*cover*/
 .cover { height: 100%;}
 /*cards*/
