--- a/stile.css
+++ b/stile.css
@@ -24,7 +24,7 @@ a:hover {color: #1af3a4;}
 .header__darioHide{height: 0px;}
 /*DARIO*/
 .header__menu__container {width: 80%; height: 100px; border: solid 1px lime; float: right;}
-.header__menu {float: right; margin: 0; width: 65%; height: 100%; padding: 30px 30px; border: solid lime 1px; background: #333;}
+.header__menu {float: right; margin: 0; width: 65%; height: 100%; padding: 30px 30px 30px 30px; border: solid lime 1px; background: #333;}
 .header__menu__item {display: inline-block; vertical-align: middle; text-align: center; border: solid red 1px; height: 58px; margin: auto auto; float: right;}
 .header__menu__item a {color: #fff; display: block; padding: 20px 10px;}
 .header__menu__item a:hover {background: #000;}
@@ -89,6 +89,7 @@ a:hover {color: #1af3a4;}
 /*SMARTPHONE*/
 /*@media (max-width: 767px)*/
 @media (max-width: 850px) {
+ .header__dario {display: none;}
 .header {position: fixed; z-index: 100; width: 100%;}
 .header__icon-bar {display: block;}
 .header__menu__item {display: block; vertical-align: middle; text-align: left; width: 100%;}
