--- a/stile.css
+++ b/stile.css
@@ -25,7 +25,7 @@ a:hover {color: #1af3a4;}
 /*DARIO*/
 .header__menu__container {width: 80%; height: 100px; border: solid 1px lime; float: right;}
 .header__menu {float: right; margin: 0; width: 65%; height: 100%; padding: 30px 30px 30px 30px; border: solid lime 1px; background: #333;}
-.header__menu__item {display: inline-block; vertical-align: middle; text-align: center; border: solid red 1px; height: 58px; margin: auto auto; float: right;}
+.header__menu__item {display: inline-block; text-align: center; border: solid red 1px; height: 58px; margin: auto auto; float: right;}
 .header__menu__item a {color: #fff; display: block; padding: 20px 10px;}
 .header__menu__item a:hover {background: #000;}
 .header__icon-bar {display: block; float: right; padding: 15px; display: none;}
