--- a/stile.css
+++ b/stile.css
@@ -33,7 +33,6 @@ a:hover {color: #1af3a4;}
 
 /*COVER*/
 .cover {height: 70%;
-        background-image: url("https://source.unsplash.com/user/erondu/1600x900");
         background-size: cover;
         -o-background-size: cover;
         -moz-background-size: cover;
@@ -43,6 +42,23 @@ a:hover {color: #1af3a4;}
 .cover__filter {background: #000; width: 100%; height: 100%; position: absolute; z-index: 0; opacity: 0.5;}
 .cover__caption {display: table; height: 100%; width: 100%; position: relative; z-index: 1; padding: 0 20px;}
 .cover__caption__copy {display: table-cell; vertical-align: middle; text-align: center; color: #fff;}
+#dots-container {margin-top:50px;}
+
+.dot{
+    cursor: pointer;
+    height: 13px;
+    width: 13px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    position: relative;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.selected{background-color: black;}
 
 .cover--single {height: 50%}
 .cover--single h1 {font-size: 42px;}
