--- a/stile.css
+++ b/stile.css
@@ -22,7 +22,7 @@ a:hover {color: #1af3a4;}
 .header__dario{z-index:2000; height:58px;background-color:#333; position: fixed;top: 0px;width: 100%;width:100%;}
 .header__menu__dario{float: right; margin: 0; padding: 0;}
 .header__darioHide{height: 0px;}
-/*DARIO*/
+/* FINE DARIO*/
 .header__menu__container {width: 80%; height: 100px; border: solid 1px lime; float: right;}
 .header__menu {float: right; margin: 0; width: 65%; height: 100%; padding: 30px 30px 30px 30px; border: solid lime 1px; background: #333;}
 .header__menu__item {display: inline-block; text-align: center; border: solid red 1px; height: 58px; margin: auto auto; float: right;}
@@ -32,12 +32,15 @@ a:hover {color: #1af3a4;}
 .header__icon-bar span {display: block; height: 3px; width: 30px; background: #fff; margin-bottom: 5px;}
 
 /*COVER*/
-.cover {height: 70%;
-        background-size: cover;
-        -o-background-size: cover;
-        -moz-background-size: cover;
-        background-position: center center;
-        position: relative;
+.cover {
+    height: 70%;
+    background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    background-position: center center;
+    position: relative;
+    opacity: 0.8;
+    transition: background-image 0.5s ease;
 }
 .cover__filter {background: #000; width: 100%; height: 100%; position: absolute; z-index: 0; opacity: 0.5;}
 .cover__caption {display: table; height: 100%; width: 100%; position: relative; z-index: 1; padding: 0 20px;}
@@ -52,7 +55,7 @@ a:hover {color: #1af3a4;}
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
-    transition: background-color 0.6s ease;
+    transition: background-color 0.5s ease;
     position: relative;
     margin-left: 5px;
     margin-right: 5px;
