--- a/stile.css
+++ b/stile.css
@@ -23,9 +23,9 @@ a:hover {color: #1af3a4;}
 .header__menu__dario{float: right; margin: 0; padding: 0;}
 .header__darioHide{height: 0px;}
 /* FINE DARIO*/
-.header__menu__container {width: 80%; height: 100px; border: solid 1px lime; float: right;}
-.header__menu {float: right; margin: 0; width: 65%; height: 100%; padding: 30px 30px 30px 30px; border: solid lime 1px; background: #333;}
-.header__menu__item {display: inline-block; text-align: center; border: solid red 1px; height: 58px; margin: auto auto; float: right;}
+.header__menu__container {border: solid 1px lime; width: 80%; height: 100px; float: right;}
+.header__menu {border: solid lime 1px; float: right; margin: 0; width: 65%; height: 100%; padding: 30px; background: #333;}
+.header__menu__item {border: solid red 1px; display: inline-block; text-align: center; height: 58px; margin: auto; float: right;}
 .header__menu__item a {color: #fff; display: block; padding: 20px 10px;}
 .header__menu__item a:hover {background: #000;}
 .header__icon-bar {display: block; float: right; padding: 15px; display: none;}
