--- a/stile.css
+++ b/stile.css
@@ -1,5 +1,5 @@
 html,body {height: 100%;}
-body {background: #eee; font-family: helvetica;}
+body {background: #d7d6d6; font-family: helvetica;}
 a {text-decoration: none;}
 
 /*GENERAL*/
@@ -32,36 +32,39 @@ a:hover {color: #1af3a4;}
 
 /*HEADER*/
 .logo {height:100%; width:100%;}
-.header {background: #333; height: 120px;}
+.header {background: rgba(255, 255, 255, 0.5); height: 120px;}
 .header__logo {color: #fff; float: left; display: block; padding: 3px 20px; width:250px; margin: 5px 5px; border: solid 1px red;}
 /*DARIO*/
 .header__logo__dario {color: #fff; float: left; display: block; padding-top: 5px;width:8%;}
-.logo__dario{height:45px; width:90px;}
-.header__dario{z-index:2000; height:58px;background-color:#333; position: fixed;top: 0px;width: 100%;width:100%;}
-.header__menu__dario{float: right; margin: 0; padding: 0;}
+.logo__dario{height:45px; width:90px; margin-left: 10px;}
+.header__dario{height:58px;background-color: #000186; position: fixed;top: 0px;width: 100%; width:100%;}
+.header__menu__dario{float: right; margin: 0; padding: 0; color: #fff;}
 .header__darioHide{height: 0px;}
 /* FINE DARIO*/
 .header__menu__container {border: solid 1px lime; width: 80%; height: 100px; float: right;}
-.header__menu {border: solid lime 1px; float: right; margin: 0; width: 65%; height: 100%; padding: 30px; background: #333;}
-.header__menu__item {border: solid red 1px; display: inline-block; text-align: center; height: 58px; margin: auto; float: right;}
-.header__menu__item a {color: #fff; display: block; padding: 20px 10px;}
-.header__menu__item a:hover {background: #000;}
+.header__menu {float: right; margin: 0; width: 65%; height: 100%; padding: 30px;}
+.header__menu__item {display: inline-block; text-align: center; height: 58px; margin: auto; float: right;}
+.header__menu__item a {color: #000186; display: block; padding: 0 10px; font-weight: 800;top: 50%; transform: translateY(-50%); position: relative;}
+.header__menu__item a:hover {color: #fff; display: block; padding: 0 10px; font-weight: 800;top: 50%; transform: translateY(-50%); position: relative;}
+.header__menu__item:hover {background: rgba(0, 1, 134, 0.55);}
 .header__icon-bar {display: block; float: right; padding: 15px; display: none;}
-.header__icon-bar span {display: block; height: 3px; width: 30px; background: #fff; margin-bottom: 5px;}
+.header__icon-bar span {display: block; height: 3px; width: 30px; background: #000186; margin-bottom: 5px;}
 
 /*COVER*/
 .cover {
-    height: 70%;
+    height: 100%;
     background-size: cover;
     -o-background-size: cover;
     -moz-background-size: cover;
     background-position: center center;
     position: relative;
+    margin-top: -120px;
     opacity: 0.8;
+    z-index: -2;
     transition: background-image 0.5s ease;
 }
-.cover__filter {background: #000; width: 100%; height: 100%; position: absolute; z-index: 0; opacity: 0.3;}
-.cover__caption {display: table; height: 100%; width: 100%; position: relative; z-index: 1; padding: 0 20px;}
+.cover__filter {background: #000; width: 100%; height: 100%; position: absolute; z-index: -2; opacity: 0.3;}
+.cover__caption {display: table; height: 100%; width: 100%; position: relative; z-index: -1; padding: 0 20px;}
 .cover__caption__copy {display: table-cell; vertical-align: middle; text-align: center; color: #fff;}
 #dots-container {margin-top:50px;}
 
@@ -146,11 +149,12 @@ a:hover {color: #1af3a4;}
 /*SMARTPHONE*/
 /*@media (max-width: 767px)*/
 @media (max-width: 850px) {
+    #header_container {height: 1px;}
  .header__dario {display: none;}
-.header {position: fixed; z-index: 100; width: 100%;}
+.header {position: fixed; width: 100%;background:grey;}
 .header__icon-bar {display: block;}
 .header__menu__item {display: block; vertical-align: middle; text-align: left; width: 100%;}
-.header__menu {width: 100%; height: 0px;overflow: hidden;  padding: 0;}
+.header__menu { background:grey; width: 100%; height: 0px;overflow: hidden;  padding: 0;}
 .is-open {height: 360px; overflow: hidden;  padding: 30px 30px;}
 /*cover*/
 .cover { height: 100%;}
