--- a/stile.css
+++ b/stile.css
@@ -28,6 +28,7 @@ a:hover {color: #1af3a4;}
      top: 50%;
      transform: translateY(-50%);
      position: relative;
+    z-index: 1900;
 }
 
 #slider_label{
@@ -40,7 +41,7 @@ a:hover {color: #1af3a4;}
 .header__logo {float: left; display: block; padding: 3px 20px; width:250px; margin-top: -8px; border: solid 1px red;}
 /*DARIO*/
 .header__logo__dario {color: #fff; float: left; display: block; padding-top: 5px;width:8%;}
-.logo__dario{height:55px; width:90px; margin-left: 30px; margin-top: -3px;}
+.logo__dario{height:70px; width:120px; margin-left: 30px; margin-top: -11px;}
 .header__dario{height:58px;background-color: #000186; position: fixed;top: 0px;width: 100%; width:100%; z-index: 2000;}
 .header__menu__dario{float: right; margin: 0; padding: 0; color: #fff;}
 .header__menu__item__dario {display: inline-block; text-align: center; height: 58px; margin: auto; float: right;}
