--- a/stile.css
+++ b/stile.css
@@ -133,7 +133,7 @@ a:hover {color: #1af3a4;}
 .banner__copy__text h4 {font-size: 22px; margin: 5px 0;}
 
 .banner__autorizzazioni {border: 1px solid lime; background: #fff; height: auto; margin-top: 40px; padding: 10px; text-align: center;}
-.banner__image__autorizzazioni {border: 1px solid red; width: 180px; height: 180px; margin: 10px; display: inline-block;}
+.banner__image__autorizzazioni {border: 1px solid red; width: 10%; margin: 10px; display: inline-block;}
 
 /*FOOTER*/
 .footer {background: #333; color: #fff; margin-top: 40px;}
