--- a/stile.css
+++ b/stile.css
@@ -38,7 +38,7 @@ a:hover {color: #1af3a4;}
 /*HEADER*/
 .logo {height:100%; width:100%;}
 .header {background: rgba(255, 255, 255, 0.5); height: 120px;}
-.header__logo {float: left; display: block; padding: 3px 20px; width:250px; margin-top: -8px; border: solid 1px red;}
+.header__logo {float: left; display: block; padding: 3px 20px; width:250px; margin-top: -8px;}
 /*DARIO*/
 .header__logo__dario {color: #fff; float: left; display: block; padding-top: 5px;width:8%;}
 .logo__dario{height:70px; width:120px; margin-left: 30px; margin-top: -11px;}
@@ -51,7 +51,7 @@ a:hover {color: #1af3a4;}
 .header__darioHide{height: 0px;}
 
 /* FINE DARIO*/
-.header__menu__container {border: solid 1px lime; width: 80%; height: 100px; float: right;}
+.header__menu__container {width: 80%; height: 100px; float: right;}
 .header__menu {float: right; margin: 0; width: 65%; height: 100%; padding: 30px;}
 .header__menu__item {display: inline-block; text-align: center; height: 58px; margin: auto; float: right;}
 .header__menu__item a {color: #000186; display: block; padding: 0 10px; font-weight: 800;top: 50%; transform: translateY(-50%); position: relative;}
@@ -132,8 +132,8 @@ a:hover {color: #1af3a4;}
 .banner__copy__text h3 {font-size: 36px; margin-bottom: 0;}
 .banner__copy__text h4 {font-size: 22px; margin: 5px 0;}
 
-.banner__autorizzazioni {border: 1px solid lime; background: #fff; height: auto; margin-top: 40px; padding: 10px; text-align: center;}
-.banner__image__autorizzazioni {border: 1px solid red; width: 10%; margin: 10px; display: inline-block;}
+.banner__autorizzazioni {background: #fff; height: auto; margin-top: 40px; padding: 10px; text-align: center;}
+.banner__image__autorizzazioni {width: 10%; margin: 10px; display: inline-block;}
 
 /*FOOTER*/
 .footer {background: #333; color: #fff; margin-top: 40px;}
