--- a/stile.css
+++ b/stile.css
@@ -87,14 +87,14 @@ a:hover {color: #1af3a4;}
 #dots-dots-container{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 70%;
     z-index: 100;
 }
 
 #dots-container {
     position: relative;
     text-align: center;
-    top:65%;
+    top: 90%;
     left: 50%;
     transform: translateX(-50%);
     width: 200px;
@@ -327,6 +327,12 @@ a:hover {color: #1af3a4;}
     .is-open {height: 300px; overflow: hidden;}
     /*cover*/
     .cover { height: 100%;}
+    #dots-dots-container{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+    }
     /*cards*/
     .card {width: 90%; margin: 5%;}
 
@@ -358,6 +364,12 @@ a:hover {color: #1af3a4;}
     .is-open {height: 300px; overflow: hidden;}
     /*cover*/
     .cover { height: 100%;}
+    #dots-dots-container{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+    }
     /*cards*/
     .card {width: 90%; margin: 5%;}
 
@@ -398,6 +410,12 @@ a:hover {color: #1af3a4;}
     .is-open {height: 300px; overflow: hidden;}
     /*cover*/
     .cover { height: 100%;}
+    #dots-dots-container{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+    }
     /*cards*/
     .card {width: 90%; margin: 5%;}
     /*banner*/
@@ -418,6 +436,12 @@ a:hover {color: #1af3a4;}
     .is-open {height: 300px; overflow: hidden;}
     /*cover*/
     .cover { height: 100%;}
+    #dots-dots-container{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+    }
     /*cards*/
     .card {width: 90%; margin: 5%;}
     /*banner*/
