--- a/stile.css
+++ b/stile.css
@@ -129,16 +129,18 @@ a:hover {color: #1af3a4;}
 
 
 /*BANNER*/
-.banner {background: #fff; height: 50%; margin-top: 40px;}
-.banner__image {width: 30%; float: left; height: 100%; background-image: url("resources/Gesa-logo-4.png");
+.banner {background: #fff; height: auto; margin-top: 40px;}
+.banner__image {width: 20%; float: left; height: 200px; background-image: url("resources/Gesa-logo-4.png");
   background-repeat: no-repeat;
     background-size: 100%;
   -o-background-size: cover;
   -moz-background-size: cover;
   background-position: center center;}
 .logo__banner {background-image: url("resources/Gesa-logo-4.png");background-size: 150px 150px;}
-.banner__copy {width: 70%; float: left; height: 100%; display: table;}
-.banner__copy__text {display: table-cell; vertical-align: middle; padding: 30px;}
+.banner__copy {width: 70%; float: left; height: 200px;}
+.banner__copy__text {
+    padding-right: 30px;
+    padding-left: 30px;}
 .banner__copy__text h3 {font-size: 36px; margin-bottom: 0;}
 .banner__copy__text h4 {font-size: 22px; margin: 5px 0;}
 .banner__autorizzazioni {background: #fff; height: auto; margin-top: 40px; padding: 10px; text-align: center;}
@@ -308,7 +310,7 @@ a:hover {color: #1af3a4;}
 /*TABLET*/
 @media (max-width: 998px) {
 .banner__image,
-.banner__copy {width: 50%; height: 50%;}
+.banner__copy {width: 50%; height: 60%;}
 }
 
 /*SMARTPHONE*/
@@ -337,9 +339,13 @@ a:hover {color: #1af3a4;}
     .card {width: 90%; margin: 5%;}
 
     /*banner*/
-    .banner {height: 100%;}
-    .banner__image {width: 100%; height: 50%;}
-    .banner__copy {width: 100%; height: 50%;}
+    .banner {height: auto;}
+    .banner__image {width:  65%; height: 200px;
+        position:relative;
+        transform: translateX(-50%);
+        left: 50%;
+    }
+    .banner__copy {width: 100%; height: 60%;}
 
     .middle_page_divider_content{
         top: 50%;
@@ -374,9 +380,13 @@ a:hover {color: #1af3a4;}
     .card {width: 90%; margin: 5%;}
 
     /*banner*/
-    .banner {height: 100%;}
-    .banner__image {width: 100%; height: 40%;}
-    .banner__copy {width: 100%; height: 50%;}
+    .banner {height: auto;}
+    .banner__image {width:  65%; height: 200px;
+        position:relative;
+        transform: translateX(-50%);
+        left: 50%;
+    }
+    .banner__copy {width: 100%; height: 60%;}
 
     .middle_page_divider{
         margin: 40px 0 10px 0;
@@ -419,9 +429,13 @@ a:hover {color: #1af3a4;}
     /*cards*/
     .card {width: 90%; margin: 5%;}
     /*banner*/
-    .banner {height: 100%;}
-    .banner__image {width: 100%; height: 38%;}
-    .banner__copy {width: 100%; height: 50%;}
+    .banner {height: auto;}
+    .banner__image {width:  65%; height: 200px;
+        position:relative;
+        transform: translateX(-50%);
+        left: 50%;
+    }
+    .banner__copy {width: 100%; height: 60%;}
 }
 
 /*SMARTPHONE 4*/
@@ -445,9 +459,13 @@ a:hover {color: #1af3a4;}
     /*cards*/
     .card {width: 90%; margin: 5%;}
     /*banner*/
-    .banner {height: 100%;}
-    .banner__image {width: 100%; height: 26%;}
-    .banner__copy {width: 100%; height: 50%;}
+    .banner {height: auto;}
+    .banner__image {width:  65%; height: 200px;
+        position:relative;
+        transform: translateX(-50%);
+        left: 50%;
+    }
+    .banner__copy {width: 100%; height: 60%;}
 
 }
 
