--- a/stile.css
+++ b/stile.css
@@ -149,7 +149,7 @@ a:hover {color: #1af3a4;}
 .banner__autorizzazioni_partnership {background: #fff; height: auto; margin-top: 40px; padding: 10px; text-align: center; margin-bottom: 30px;}
 .banner__autorizzazioni {background: #fff; height: auto; margin-top: 40px; padding: 10px; text-align: center;}
 .banner__image__autorizzazioni {width: 150px; margin: 10px; display: inline-block;}
-.banner__image__certificazioni {margin: 10px; display: inline-block;}
+.banner__image__certificazioni {width: 150px; margin: 10px; display: inline-block;}
 .banner__testo__centrato {height:100px; width: 300px; margin: 10px 10px;}
 
 /*FOOTER*/
